traefik-endpoints/external/home-assistant/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.galinec.org`)
      kind: Rule
      services:
        - name: home-assistant
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: galinec-org-tls
